[gd_scene load_steps=8 format=3 uid="uid://543qrvhco8oe"]

[ext_resource type="Script" uid="uid://rp7khf168wa1" path="res://Scripts/casino.gd" id="1_7pnxo"]
[ext_resource type="PackedScene" uid="uid://dn0pk1ehvbdjx" path="res://Scenes/Hand.tscn" id="1_yc6b3"]
[ext_resource type="FontFile" uid="uid://djnp2gqfshokt" path="res://Other/VCR_OSD_MONO_1.001.ttf" id="2_eg3rn"]
[ext_resource type="PackedScene" path="res://Scenes/pop_up_card.tscn" id="2_v4qov"]
[ext_resource type="AudioStream" uid="uid://dhp4lfxj5qefv" path="res://Sounds/soundtracks/segregated.mp3" id="5_bf5eg"]
[ext_resource type="AudioStream" uid="uid://dv5jsc7xhynjn" path="res://Sounds/cards/next_card.mp3" id="6_54e80"]
[ext_resource type="Texture2D" uid="uid://cyjn7eu7ecq4g" path="res://Sprites/backgrounds/background12.png" id="7_tw0yg"]

[node name="Casino" type="Node2D"]
script = ExtResource("1_7pnxo")
new_card_pop_up = ExtResource("2_v4qov")

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
light_mask = 4
visibility_layer = 4
z_index = -9
offset_left = -14.0
offset_top = -12.0
offset_right = 1159.0
offset_bottom = 660.0
texture = ExtResource("7_tw0yg")

[node name="Hand" parent="." instance=ExtResource("1_yc6b3")]

[node name="Button" type="Button" parent="."]
offset_left = 493.0
offset_top = 263.0
offset_right = 676.0
offset_bottom = 341.0
pivot_offset = Vector2(95, 46)
theme_override_fonts/font = ExtResource("2_eg3rn")
theme_override_font_sizes/font_size = 23
text = "Jeszcze Jeden"

[node name="NextLevel" type="Button" parent="."]
offset_left = 952.0
offset_top = 34.0
offset_right = 1135.0
offset_bottom = 112.0
pivot_offset = Vector2(95, 46)
theme_override_fonts/font = ExtResource("2_eg3rn")
theme_override_font_sizes/font_size = 23
text = "Lecimy Dalej"

[node name="Stats" type="RichTextLabel" parent="."]
offset_left = 12.0
offset_top = 8.0
offset_right = 294.0
offset_bottom = 242.0
theme_override_fonts/normal_font = ExtResource("2_eg3rn")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "test"

[node name="remove" type="RichTextLabel" parent="."]
offset_left = 350.0
offset_top = 20.0
offset_right = 839.0
offset_bottom = 167.0
theme_override_fonts/normal_font = ExtResource("2_eg3rn")
theme_override_font_sizes/normal_font_size = 29
bbcode_enabled = true
text = "Zanim spróbujesz szczęścia, możesz kliknąć na jedną kartę żeby się jej pozbyć"
horizontal_alignment = 1

[node name="Traits" type="RichTextLabel" parent="."]
offset_left = 10.0
offset_top = 114.0
offset_right = 532.0
offset_bottom = 348.0
theme_override_fonts/normal_font = ExtResource("2_eg3rn")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "test"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_bf5eg")
autoplay = true

[node name="next_card_song" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_54e80")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="NextLevel" to="." method="_on_next_level_pressed"]
